# macup

./: .gitignore  ADDING_MANAGERS.md  Cargo.toml  LICENSE  Makefile  README.md  bootstrap.sh  macup  macup.toml
src/: cli.rs  main.rs
src/commands/: add.rs  apply.rs  diff.rs  import.rs  mod.rs  new_manager.rs  remove_manager.rs
src/config/: loader.rs  mod.rs  schema.rs  validator.rs
src/executor/: apply.rs  mod.rs  planner.rs
src/managers/: brew.rs  cargo_manager.rs  install.rs  mas.rs  mod.rs  npm.rs  registry.rs
src/system/: mod.rs
src/utils/: command.rs
