[package]
name = "macup"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A thin orchestrator for Mac bootstrap and setup"
license = "MIT"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# Config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
toml_edit = "0.22"

# Parallel execution
rayon = "1.10"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
which = "4.4"
dirs = "4.0"
home = "=0.5.5"
colored = "2.1"
indicatif = "0.17"

# Logging
env_logger = "0.11"
log = "0.4"
